--- a/amorgos_echoes/pubspec.yaml
+++ b/amorgos_echoes/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   http: ^1.3.0
   google_fonts: ^6.1.0
+  connectivity_plus: ^5.0.2
   url_launcher: ^6.1.14
   firebase_core: ^3.15.2
   cloud_firestore: ^5.6.12
